--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<h1>Unsere website ist noch in Bearbeitung.</h1>
+<!DOCTYPE html>
+<html>
+<head>
+  <meta name="description" content="Website für unsere Alpakas">
+  <meta name="keywords" content="Eisenach,Alpaka">
+  <title>Alpakas Eisenach</title>
+</head>
+<body>
+  <h1>Unsere website ist noch in Bearbeitung.</h1>
+</body>
+</html>
