--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Alpakas Eisenach</title>
 </head>
 <body>
-  <h1>Unsere website ist noch in Bearbeitung.</h1>
+  <h1>Unsere Website ist noch in Bearbeitung.</h1>
   <img src="image.jpg">
 </body>
 </html>
