--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta name="description" content="Website für unsere Alpakas">
   <meta name="keywords" content="Eisenach,Alpaka">
-  <title>Alpakas Eisenach</title>
+  <title>🚧 Alpakas Eisenach</title>
 </head>
 <body>
   <h1>Unsere Website ist noch in Bearbeitung.</h1>
