--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
   <meta name="description" content="Website für unsere Alpakas">
   <meta name="keywords" content="Eisenach,Alpaka">
   <title>🚧 Alpakas Eisenach</title>
+  <style>
+    h1 {
+      color: red;
+    }
+  </style>
 </head>
 <body>
   <h1>🚧 Unsere Website ist noch in Bearbeitung.</h1>
