--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta name="description" content="Website für unsere Alpakas">
-  <meta name="keywords" content="Eisenach,Alpaka,Wartburgkreis,Alpakafarm">
+  <meta name="keywords" content="Eisenach,Alpaka,Möller,Wartburgkreis,Alpakafarm">
   <title>🚧 Alpakas Eisenach</title>
   <style>
     h1 {
