--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </style>
 </head>
 <body>
-  <h1>🚧      Unsere Website ist noch in Bearbeitung.  </h1>
+  <h1>🚧      Unsere Website ist noch in Bearbeitung.   🚧</h1>
   <img src="image.jpg">
 </body>
 </html>
