--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 								<div class="content color0 span-3-75">
 									<h1 class="major">Alpakas in<br />
 									Eisenach </h1>
-									<p class="big-text">♥️-lich Wilkkommen bei unseren Alpakas am Wartenberg</p>
+									<p class="big-text">♥️-lich Willkommen bei unseren Alpakas am Wartenberg</p>
 									<ul class="actions">
 										<li><a href="#first" class="button primary color1 circle icon solid fa-angle-right">Next</a></li>
 									</ul>
