--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 									Eisenach </h1>
 									<p class="big-text">♥️-lich Willkommen bei unseren Alpakas am Wartenberg</p>
 									<ul class="actions">
-										<li><a href="#first" class="button primary color1 circle icon solid fa-angle-right">Next</a></li>
+										<li><a href="#kontakt" class="button primary color1 circle icon solid fa-angle-right">Next</a></li>
 									</ul>
 								</div>
 								<div class="image filtered span-1-75" data-position="25% 25%">
@@ -77,7 +77,7 @@
 							</section>
 
 						<!-- Panel -->
-							<section class="panel color4-alt">
+							<section class="panel color4-alt" id="kontakt">
 								<div class="intro color4">
 									<h2 class="major">Kontakt</h2>
 									<p class="big-text">Fam. Möller<br>Eisenach<br>Tel.: 01716540654<br>Email: gm612(at)gmx.de</p>
